# ecms-api

./: .gitignore  Pipfile  README.md  README.rst  main.py  pyproject.toml  setup copy.cfg  setup.cfg  setup.py  setup.text
src/: __init__.py  conn.py  models.py
src/EcmsApi/: __init__.py  conn.py  queries.py  tables.py
src/EcmsApi/HR/: __init__.py  models.py
src/EcmsApi/tables/: __init__.py  _base.py  models.py
src/api/api/: settings.py  urls.py
src/api/hrtemp/: apps.py  models.py  serializers.py  urls.py  views.py
src/hr/: __init__.py  models.py
