[metadata]
name = ECMS-API
version = 0.1.0
author = Johnny Whitworth
author-email = jwhitworth@arizonapipeline.com
description = A python integration to allow for quickly sending queries directly to the as400
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
    Sentinel = https://github.com/Poseidon-Dev/ecms-api
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

