[metadata]
name = ecms-api
version = 0.1.7
author = Johnny Whitworth
author-email = jwhitworth@arizonapipeline.com
description = A python integration to allow for quickly sending queries directly to the as400
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
    ecms-api = https://github.com/Poseidon-Dev/ecms-api
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.9
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = ecmsapi
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

